<resources>
    <string name="app_name">Emotion Control</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message" translatable="false">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text" translatable="false">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title" translatable="false">XIAOMOTION Control Emotion</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message" translatable="false">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="cortinilla">StatusBar Expanded</string>
    <string name="systemui">SystemUI Type</string>
    <string name="statusbar">StatusBar</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog" translatable="false">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message" translatable="false">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description" translatable="false">This action will restore the following items to stock colors</string>
    <string name="launcher">Launcher Type</string>
    <string name="bloqueo">Lookscreen</string>
    <string name="apk">Apk´s Emotion</string>
    <string name="S_View_window_wallpaper">S_View window wallpaper</string>
    <string name="Choose_Background_for_SView_Window">Choose Background for SView Window</string>
    <string name="UPSM_Manager" translatable="false">UPSM Manager</string>
    <string name="Enable_apps_on_UPSM">Enable apps on UPSM</string>
    <string name="SuperSu">SuperSu</string>
    <string name="Root_Access_Control">Root Access Control</string>
    <string name="S5_Toolbox">S5_Toolbox</string>
    <string name="Greenify">Greenify</string>
    <string name="Hibernate_Apks">Hibernate Apks</string>
    <string name="Busybox">Busybox</string>
    <string name="Busybox_On_Rails">Busybox On Rails</string>
    <string name="texdroider" translatable="false">texdroider</string>
    <string name="adaway" translatable="false">adaway</string>
    <string name="Development_Settings">Development_Settings</string>
    <string name="Go_to_Development_Settings_Menu">Go to Development Settings Menu</string>
    <string name="Lockscreen_Effects">Lockscreen Effects</string>
    <string name="Effects_Unlocked">Configure Lockscreen Effects</string>
    <string name="Show_Hide_LockScreen_Elements">Show Hide LockScreen Elements</string>
    <string name="Camera_shortcut_in_Lockscreen">Camera shortcut in Lockscreen</string>
    <string name="Show_All_Lockscreen_Info">Show All Lockscreen Info</string>
    <string name="Lockscreen_Date">Lockscreen Date</string>
    <string name="Lockscreen_Clock">Lockscreen Clock</string>
    <string name="Lockscreen_Weather_and_Steps">Lockscreen Weather and Steps</string>
    <string name="Swype_to_Unlock_Text">Swype to Unlock Text</string>
    <string name="Phone_shortcut_in_Lockscreen">Phone shortcut in Lockscreen</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Shown">Shown</string>
    <string name="Hidden">Hidden</string>
    <string name="Sfinder_Qconnect">Sfinder Qconnect</string>
    <string name="Display_SFinder">Display SFinder</string>
    <string name="Notification_Brightness">Notification Brightness</string>
    <string name="Notification_Brightness_Visibility">Notification Brightness Visibility</string>
    <string name="Backgrounds">Backgrounds</string>
    <string name="header_bg_color">header bg color</string>
    <string name="Brightness_Slider">Brightness Slider</string>
    <string name="Reboot_SystemUI">Reboot SystemUI</string>
    <string name="Brightness_Back_Color">Brightness Back Color</string>
    <string name="Toogle_Background_color">Toogle Background color</string>
    <string name="Sfinder_Background_color">Sfinder Background color</string>
    <string name="Toogles">Toogles</string>
    <string name="Visible_Toggles_Shown">Visible Toggles Shown</string>
    <string name="Toggle_Text">Toggle_Text</string>
    <string name="Toggle_Buttons_Background">Toggle Buttons Background</string>
    <string name="Toggle_Text_Color">Toggle Text Color</string>
    <string name="Toggle_Circle_Color">Toggle Circle Color</string>
    <string name="Toggle_Color">Toggle Color</string>
    <string name="Mem_Kill">Mem Kill</string>
    <string name="Memory_Cleaner">Memory Cleaner</string>
    <string name="Memory_Cleaner_Color">Memory Cleaner Color</string>
    <string name="Device_Info_Header">Device Info Header</string>
    <string name="color_title">Color Title</string>
    <string name="color_sumary">Color Summary</string>
    <string name="Device_Info_visibility">Device Info visibility</string>
    <string name="Notificacions">Notificacions</string>
    <string name="Notifications_Colors">Notifications Colors</string>
    <string name="Disable_On_Going_Notifications">Disable On Going Notifications</string>
    <string name="Ongoing_Notifications">Ongoing Notifications</string>
    <string name="Heads_Up_Notifications">Heads Up Notifications</string>
    <string name="Types_Launcher">Types Launcher</string>
    <string name="StockTw">StockTw</string>
    <string name="launcher_six">Launcher 6x5</string>
    <string name="launcher_seven">Launcher 7x5</string>
    <string name="Apk_Launcher">Apk Launcher</string>
    <string name="TW_Swipe">TW Swipe</string>
    <string name="Galaxy_Icon_Themer">Galaxy Icon Themer</string>
    <string name="Statusbar_Clock">Statusbar Clock Options</string>
    <string name="Custom_clock">Custom clock Settings</string>
    <string name="Position_Reloj">Position Reloj</string>
    <string name="Custom_Text_Options">Custom Text Options</string>
    <string name="Custom_text">Custom text</string>
    <string name="Change_custom_text_color">"Change custom text color</string>
    <string name="Choose_color">Choose color</string>
    <string name="Change_custom_text">Change custom text</string>
    <string name="Edit_text">Edit text</string>
    <string name="Status_Bar_Backgrounds">Status Bar Backgrounds</string>
    <string name="Potato_Gradient">Potato Gradient</string>
    <string name="StatusBar_Background">StatusBar Background</string>
    <string name="Icon_Wifi_color">Icon Wifi color</string>
    <string name="Icon_Signal_color">Icon Signal color</string>
    <string name="Status_Bar_Icon_color">Status Bar Icon color</string>
    <string name="Batery_Text_color">Batery Text color</string>
    <string name="Batery_Icon_color">Batery Icon color</string>
    <string name="Internet_Meter">Internet Meter</string>
    <string name="Network_Speed_Color">Network Speed Color</string>
    <string name="Color_of_network_speed_text">Color of network speed text</string>
    <string name="Traffic_Meter_Type">Traffic Meter Type</string>
    <string name="Meter_Update_Frequency">Meter Update Frequency</string>
    <string name="Display_Unit">Display Unit</string>
    <string name="Autohide_Meter">Autohide Meter</string>
    <string name="Network_traffic_will_autohide">Network traffic will autohide</string>
    <string name="Network_traffic_always_shown">Network traffic always shown</string>
    <string name="Autohide_Threshold">Autohide Threshold</string>
    <string name="Battery_Changer">Battery Changer</string>
    <string name="Minit_Battery_Mod">3Minit Battery Mod</string>
    <string name="Choose_Your_Fav_Battery">Choose Your Fav Battery</string>
    <string name="Show_Hide_Stock_Battery">Show Hide Stock Battery</string>
    <string name="Stock_Battery_shown">Stock Battery shown</string>
    <string name="Stock_Battery_is_hidden">Stock Battery is hidden</string>
    <string name="Show_Hide_3Minit_Battery">Show Hide 3Minit Battery</string>
    <string name="Minit_Battery_shown">3Minit_Battery_shown</string>
    <string name="Minit_Battery_is_hidden">Minit Battery is hidden</string>
    <string name="Battery_Icon_Settings">Battery Icon Settings</string>
    <string name="Display_Percentage">Display Percentage</string>
    <string name="Battery_text_shown">Battery text shown</string>
    <string name="Battery_text_is_hidden">Battery text is hidden</string>
    <string name="Percentage_Color">Percentage Color</string>
    <string name="sound_mobile">Sound of mobile</string>
    <string name="sound_slow">Low Sound</string>
    <string name="sound_mid">Medium Sound</string>
    <string name="sound_hight">Hight Sound</string>
</resources>