<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:icon="@drawable/lockscreen" android:title="@string/Lockscreen_Effects" android:summary="@string/Effects_Unlocked">
        <intent android:targetPackage="com.xpe.app.galaxy.lockscreen.effect" android:action="android.intent.action.MAIN" android:targetClass="com.xpe.app.galaxy.lockscreen.effect.MainActivity" />
    </PreferenceScreen>
    <PreferenceCategory android:title="Show_Hide_LockScreen_Elements" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Camera_shortcut_in_Lockscreen" android:key="set_shortcuts_mode" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Show_All_Lockscreen_Info" android:key="lock_show_info" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Lockscreen_Date" android:key="lock_screen_date_and_year" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Lockscreen_Clock" android:key="lock_screen_show_clock" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Lockscreen_Weather_and_Steps" android:key="lock_additional_info" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Swype_to_Unlock_Text" android:key="unlock_text" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:defaultValue="1" android:key="set_shortcuts_phone" android:summaryOff="@string/Hidden" android:summaryOn="@string/Shown" android:title="@string/Phone_shortcut_in_Lockscreen" />
</PreferenceScreen>